package sp33.src;

import java.io.File;
import java.io.FileWriter;
import java.io.IOException;

public class Choice {


}
