@startuml

class Main

class StartMenu

StartMenu : + loginScreen()
StartMenu : + loginExistingUser()
StartMenu : + loginCheck()
StartMenu : + signupuser();


class MainMenu
MainMenu : +search()
MainMenu : +SearchCategory()
MainMenu : +contentWatched()
MainMenu : +watchList()

class UserDB
UserDB : +VerifyUserLogin
UserDB : +signup()




class User
User : +getpassWord
User : +getuserName


class JflixDB
JflixDB : +getMovies()
JflixDB : +movieListCategorize()
JflixDB : +getSeries()
JflixDB : +seriesListCategorize()
JflixDB : +getWatchList()
JflixDB : +getSavedContentlist()


class Choices
Choices : +choiceFunction()
Choices : +checkWatchList()
Choices : +checkSavedContentList()
Choices : +removeRecord()


class Movie
Movie : +name
Movie : +year
Movie : +rating
Movie : +toString()

class series
series : +name
series : +year
series : +rating
series : +toString()




series *--* JflixDB
Movie *--* JflixDB


StartMenu --* Choices
Main *-- StartMenu
MainMenu *-- JflixDB
MainMenu *-- Choices

StartMenu *-- UserDB
User --*UserDB








@enduml